# B-cos-v2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  TRAINING.md  environment.yml  environment_detailed.yml  environment_short.yml  evaluate.py  hubconf.py  pyproject.toml  requirements-train.txt  requirements.txt  run_with_submitit.py  setup.py  train.py
bcos/: __init__.py  common.py  settings.py  version.py
bcos/data/: categories.py  datamodules.py  presets.py  sampler.py  transforms.py
bcos/data/caching/: __init__.py  shm_caching.py
bcos/data/caching/cached_imagefolder/: __init__.py  cached_loader.py  (+4 more)
bcos/experiments/utils/: __init__.py  config_utils.py  exceptions.py  structure_constants.py
bcos/models/: __init__.py  convnext.py  densenet.py  pretrained.py  resnet.py  vgg.py  vit.py
bcos/modules/: __init__.py  bcosconv2d.py  bcoslinear.py  common.py  logitlayer.py  losses.py
bcos/modules/norms/: __init__.py  centered_norms.py  utils.py
bcos/optim/: __init__.py  lr_scheduler_factory.py  optimizer_factory.py
bcos/training/: __init__.py  agc.py  ema.py  trainer.py
bcos/training/callbacks/: __init__.py  explanation_logger.py  metricstracker.py
extra/: minimal_bcos_resnet.py
interpretability/: __init__.py
interpretability/analyses/: localisation.py  localisation_configs.py  localisation_submitit.py  utils.py
interpretability/explanation_methods/: explanation_configs.py  utils.py
interpretability/explanation_methods/explainers/: __init__.py  captum.py  lime.py  occlusion.py  ours.py  rise.py
scripts/: strip_checkpoints.py
(+18 files in other folders)
