[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bcos"
authors = [
    {name = "Moritz Böhle", email = "mboehle@mpi-inf.mpg.de"},
    {name = "Navdeeppal Singh", email = "npsingh0181@gmail.com"},
]
version = "0.1.3"
description = "B-cos models."
readme = "README.md"
license = {text = "Apache License 2.0"}

[project.urls]
repository = "https://github.com/B-cos/B-cos-v2/"

[tool.setuptools.packages.find]
#where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["bcos*"]
exclude = ["extra*", "interpretability*", "tests*"]


# ==================== Extra ====================
[tool.ruff]
extend-ignore = [
    "E501",  # line too long
]

[tool.ruff.per-file-ignores]
# ignore import violations in __init__.py files
"__init__.py" = ["F401", "E402", "F403"]
